Se agregaron funcionalidades

--- a/pintureria.html
+++ b/pintureria.html
@@ -217,14 +217,12 @@
         </h2>
         <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
           <div class="accordion-body">
+            <button id="btnPromedio" class="btn btn-primary mt-3">Calcular Promedio</button>
+              <button id="btnEstadistica" class="btn btn-warning mt-3">Mostrar Estadísticas</button>
             <div id="idEstadisticas">
               <div class="row">
-                <div class="col offset-4">
-                  <h4>Estadísticas</h4>
-                </div>
+
               </div>
-              <button id="btnPromedio" class="btn btn-primary mt-3">Calcular Promedio</button>
-              <button id="btnEstadistica" class="btn btn-warning mt-3">Mostrar Estadisticas</button>
             </div>
           </div>
         </div>
